Wrap navigation arrows in fixed nav div

--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,19 @@ html {
 /*  Navigation                            */
 /******************************************/
 
-.nav-arrow {
-  font-size: 30px;
-  color: black;
-}
-
-.nav-left {
+.room-navigation {
   position: fixed;
   top: 5vh;
   left: 5vw;
+}
+
+.room-navigation a {
+  float: left;
+  padding: 14px;
+}
+.nav-arrow {
+  font-size: 30px;
+  color: black;
 }
 
 /******************************************/
